--- a/Test/packages.config
+++ b/Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Mono.Options" version="4.4.0.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net4" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
 </packages>
